# muse

./: CMakeLists.txt  README.md  conanfile.py  makefile  pyproject.toml  script.py
data/: tokenized_data.json
model/: config.json  museformer.pt  tokens.json
output/: muse_05_11-16_$M.mid  muse_05_12-11_31.mid  muse_05_12-11_33.mid  muse_05_12-11_35.mid  muse_05_12-11_41.mid
src/cppsrc/: main.cpp
src/cppsrc/model/: museformer.cpp  museformer.hpp
src/cppsrc/model/utils/: embedding.cpp  embedding.hpp  utils.hpp
src/cppsrc/test/: test_basic.cpp
src/pysrc/: main.py  pytorch_model.py
src/pysrc/data_client/: collect_features.py  data_client.py  generate_tokens.py  tokenizer.py
src/pysrc/data_loader/: collect_features.py  data_loader.py  generate_melody.py  generate_tokens.py  melody.py  tokenizer.py
src/pysrc/exec/: muse.py  params.py  utils.py
src/pysrc/model/: pytorch_model.py  train_model.py
